# Rust-Platformer

./: .gitignore  .travis.yml  Cargo.toml  build.rs
assets/: map.json  untitled.json
lib/cutec2-sys/: Cargo.toml  build.rs
lib/cutec2-sys/src/: cutec2.c  lib.rs  wrapper.h
lib/cutec2-sys/src/bindings/: mod.rs
lib/gl/: Cargo.toml
src/: main.rs
src/components/: mod.rs
src/graphics/: mod.rs  render_system.rs  renderer.rs  shader.rs  texture.rs
src/lines_system/: mod.rs
src/map_system/: mod.rs
src/movement/: mod.rs
src/physics/: mod.rs
src/player_system/: mod.rs
src/window_manager/: mod.rs
